--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container controls">
             <button class="btn btn--link showIndex" title="Show index" disabled>Show index</button>
             <button class="btn btn--link quiz10" title="New quiz with 10 questions">Quick quiz</button>
-            <button class="btn btn--link quiz150" title="New quiz with 150 questions">Simulation</button>
+            <button class="btn btn--link quizSimulation" title="New quiz with 150 questions">Simulation</button>
             <button class="btn btn--link quizAll" title="New quiz with all the questions available">All questions</button>
             <button class="btn btn--link quizPrevious" title="Continue with previous quiz">Continue</button>
             <button class="btn btn--link endQuiz" disabled>End Quiz</button>
