--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="js/data.js"></script> <!-- Functions to retrieve the contents of the data -->
     <script src="js/quiz.js"></script> <!-- Class to control the quiz -->
     <script src="js/question.js"></script> <!-- Class to control each question -->
+    <script src="js/modal.js"></script> <!-- Control and render of the modal with the options for the new quiz -->
     <script src="js/index.js"></script> <!-- Control and render of the sidebar with the index of the questions -->
     <script src="js/timer.js"></script> <!-- Render control for the timer -->
     <script src="js/quiz_report.js"></script> <!-- Control and render of the report at the end of the quiz -->
