Edit - relocate control data

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div class="container">
         <div class="quiz"></div>
     </div>
+    <div class="modal-overlay"></div>
+    <div class="modal"></div>
 
     <!-- "Classic" script load -->
     <!-- The javascript modules won't work on local execution enviroments -->
