--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <div class="container">
         <div class="quiz"></div>
     </div>
-    <div class="modal-overlay"></div>
-    <div class="modal"></div>
+    <div class="modal">
+        <div class="modal-overlay"></div>
+        <div class="modal-content"></div>
+    </div>
 
     <!-- "Classic" script load -->
     <!-- The javascript modules won't work on local execution enviroments -->
