Add - First version

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="js/index.js"></script> <!-- Control and render of the sidebar with the index of the questions -->
     <script src="js/timer.js"></script> <!-- Render control for the timer -->
     <script src="js/quiz_report.js"></script> <!-- Control and render of the report at the end of the quiz -->
+    <script src="js/general_report.js"></script> <!-- Control and render of the historic report at the initial page -->
     <script src="js/main.js"></script> <!-- Initialization and interface control -->
 </body>
 </html>
